# midi-rs

./: Cargo.toml  README.md
src/: lib.rs  manufacturer.rs  message.rs  to_raw_messages.rs  types.rs  utils.rs
